<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TambahProdukPenjualan"
    android:background="@color/abuabu_terang">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/biru"
        android:padding="8dp">

        <ImageView
            android:id="@+id/arrow_back"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            android:src="@drawable/ic_arrow_back" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:layout_toRightOf="@+id/arrow_back"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tambah_produk_penjualan"
                android:textColor="@color/white"
                android:textSize="20dp"
                android:textStyle="bold">

            </TextView>

        </LinearLayout>

    </RelativeLayout>

    <TextView
        android:id="@+id/kategori_produk"
        android:layout_width="160dp"
        android:layout_height="20dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="85dp"
        android:text="@string/tambah_produk_penjualan_upload_foto_produk"
        android:textColor="@color/black"
        android:textSize="15dp"/>

    <RelativeLayout
        android:layout_width="390dp"
        android:layout_height="150dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="110dp"
        android:background="@drawable/rounded_rectangle_white"
        android:padding="20dp">

        <ImageView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_centerInParent="true"
            android:src="@drawable/ic_add">

        </ImageView>

    </RelativeLayout>

    <TextView
        android:layout_width="160dp"
        android:layout_height="20dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="280dp"
        android:text="@string/tambah_produk_penjualan_nama_produk"
        android:textColor="@color/black" />

    <RelativeLayout
        android:layout_width="390dp"
        android:layout_height="30dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="300dp"
        android:background="@drawable/rounded_rectangle_white">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_centerInParent="true"
            android:layout_marginLeft="10dp"
            android:text="@string/tambah_produk_penjualan_nama_produk_text" />

    </RelativeLayout>

    <TextView
        android:layout_width="160dp"
        android:layout_height="20dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="340dp"
        android:text="@string/tambah_produk_penjualan_harga_produk"
        android:textColor="@color/black"/>

    <RelativeLayout
        android:layout_width="390dp"
        android:layout_height="30dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="360dp"
        android:background="@drawable/rounded_rectangle_white">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_centerInParent="true"
            android:layout_marginLeft="10dp"
            android:text="@string/tambah_produk_penjualan_harga_produk_text">

        </TextView>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/tambah_produk_penjualan_tombol_simpan"
        android:layout_width="390dp"
        android:layout_height="30dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="410dp"
        android:background="@color/hijo_terang">

    </RelativeLayout>

</RelativeLayout>